# dm_generate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dm_generate/: __init__.py  errors.py
src/dm_generate/database/: __init__.py  component.py
