[build-system]
requires = ["setuptools>=75.1", "setuptools_scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dm_generate"
dynamic = ["version"]
authors = [{ name = "Michael Cummings", email = "mgcummings@yahoo.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Setuptools",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "attrs>=24.2",
    "docopt>=0.6",
    "pint>=0.24",
    "pyodbc>=5.1",
    "uncertainties>=3.2",
]
keywords = ["FreeCAD", "KiCAD"]
license = { text = "BSD-3-Clause" }
maintainers = [{ name = "Michael Cummings", email = "mgcummings@yahoo.com" }]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-cov>=7.6",
    "pytest-codeblocks>=0.17",
    "pytest-bdd-ng>=2.1",
]

[project.scripts]
"dm-gen" = "dm_generate:cli"

[project.entry-points.cli]
dbase = "dm_generate.database"

[project.urls]
Homepage = "https://github.com/dragon-mobile/dm_generate"
Issues = "https://github.com/dragon-mobile/dm_generate/issues"
Repository = "https://github.com/dragon-mobile/dm_generate"

[tool.pytest.ini_options]
addopts = "--codeblocks --cov=dm_generate --import-mode=importlib --pyargs dm_generate"
consider_namespace_packages = true
minversion = "8.3"
pythonpath = "src"
testpaths = "tests"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
include = ["pyproject.toml", "src/**/*.py"]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "N"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["dm_generate", "dm_generate.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

[tool.typos]

[tool.typos.default]
locale = "en-us"

[tool.typos.default.extend-words]
pn = "pn"
licence = "licence"

[tool.typos.files]
extend-exclude = ["data/*.csv"]
ignore-files = true
ignore-vcs = true
